# 2DPoseViewer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pose2d_viewer/: __init__.py  __main__.py  app.py  canvas.py  constants.py  controls.py  filtering.py  models.py  multi_view.py  skeletons.py  stroke_detector.py  stroke_dialog.py  utils.py
tests/: __init__.py  test_filtering.py
