[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pose2d-viewer"
version = "0.1.0"
description = "A PySide6-based tool for visualizing 2D pose estimation data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["pose", "visualization", "pyside6", "openpose", "skeleton"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "PySide6>=6.4.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "anytree>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black",
    "isort",
    "mypy",
]
filtering = [
    "filterpy>=1.4.0",
    "statsmodels>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pose2d-viewer"
Documentation = "https://github.com/yourusername/pose2d-viewer#readme"
Repository = "https://github.com/yourusername/pose2d-viewer"
Issues = "https://github.com/yourusername/pose2d-viewer/issues"

[project.scripts]
pose2d-viewer = "pose2d_viewer:main"

[project.gui-scripts]
pose2d-viewer-gui = "pose2d_viewer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pose2d_viewer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
